--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,22 +1,58 @@
-.wellcome{
+.wellcome {
     background-color: #582707;
     color: #F5EAEA;
-    p{
+    overflow: hidden;
+
+    p {
         white-space: nowrap;
         width: fit-content;
         overflow: hidden;
         margin: 0;
-        animation: marquee 15s infinite linear;
+        font-size: 1.25em;
+        animation: marquee 15s infinite ease-out;
     }
 }
+
 @keyframes marquee {
-    from {transform: translateX(-100%);}
-    
-    to {transform: translateX(650%);}
-  }
-header{
-    .logo{
-        width: 6rem;
+    from {
+        transform: translateX(-100vw);
     }
+
+    to {
+        transform: translateX(100vw);
+    }
+}
+
+header {
+    .h1 {
+        font-size: map-get($map: $fontSize, $key: Xl);
+
+        &Logo {
+            width: 140px;
+        }
+
+        &:hover {
+            transform: scale(110%);
+            transition: all 1s;
+        }
+    }
+
+    .nav-link {
+        &:hover {
+            transform: scale(110%);
+            transition: all 1s;
+        }
+    }
+
+    .navbar-toggler {
+        border: none;
+        color: $black;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+
     background-color: $headerBG;
+
 }
