--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -65,4 +65,5 @@ header {
     background-color: $secondaryColor !important;
     border: 1px transparent solid;
     border-radius: 100px;
+    width: fit-content;
 }
