--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -1,4 +1,20 @@
+@media (max-width: 1440px) {
+    .card {
+        margin-left: 2rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .card {
+        margin-left: 1.5rem
+    }
+}
+
 @media (max-width: 768px) {
+    .card {
+        margin-left: 2rem;
+    }
+
     .wellcome {
         p {
             font-size: 1em;
@@ -14,7 +30,17 @@
     }
 }
 
+@media (max-width: 425px) {
+    .card {
+        margin-left: 3rem;
+    }
+}
+
 @media (max-width: 375px) {
+    .card {
+        margin-left: 2rem;
+    }
+
     .wellcome {
         p {
             font-size: 0.8em;
@@ -27,5 +53,11 @@
         }
 
         font-size: 1.5em !important;
+    }
+}
+
+@media (max-width: 320px) {
+    .card {
+        margin-left: 0;
     }
 }
